Bug 169979 - FILESAVE: ODP -> PPTX missing p:pic element
Summary: FILESAVE: ODP -> PPTX missing p:pic element
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.8.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Karthik
URL:
Whiteboard: target:26.8.0 target:26.2.0.2 target:...
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-15 04:04 UTC by Karthik
Modified: 2026-01-08 13:23 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
ODP File (12.27 KB, application/vnd.oasis.opendocument.presentation)
2025-12-15 04:05 UTC, Karthik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Karthik 2025-12-15 04:04:51 UTC
Description:
Open the attached ODP file and convert it to PPTX, the resulting file can't be opened in PowerPoint.

Officeotron and OOXML validator doesn't give any errors

If unzip the PPTX file and look at the formatted slide2.xml, there is no `p:pic` element inside the OLE's `a:graphicData`. PowerPoint doesn't accept OLEs without `p:pic` element

Steps to Reproduce:
1.Open the attached ODP file
2.Save it as PPTX
3.Open the resulting file in PowerPoint

Actual Results:
PowerPoint fails to open the file

Expected Results:
PowerPoint opens the file without any problem


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.2.3.2 (X86_64) / LibreOffice Community
Build ID: 520(Build:2)
CPU threads: 22; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: en-IN (en_IN); UI: en-US
Debian package version: 4:25.2.3-2+deb13u2
Calc: threaded
Comment 1 Karthik 2025-12-15 04:05:19 UTC
Created attachment 204645 [details]
ODP File
Comment 2 Commit Notification 2026-01-06 18:04:38 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/20fb6d3406a393073fd013ea20d1dec498476c87

tdf#169979: ODP->PPTX export missing p:pic element

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2026-01-07 15:29:03 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/8c35a2d58b5d1a7326416a2c82a4f304bd23378f

tdf#169979: ODP->PPTX export missing p:pic element

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2026-01-08 11:03:38 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/939cdbe62a6f141aad879f7f428eb5cd0361c1ae

tdf#169979: ODP->PPTX export missing p:pic element

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2026-01-08 13:23:51 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/da61cce89a31e9808c80b9025b8a4698664ad83c

tdf#169979: sd_export_tests-ooxml4: Add test

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.