tdf#169979: ODP->PPTX export missing p:pic element

OLE objects when exported to PPTX should contain p:pic element in the
XML. OLEs without graphic content don't export p:pic element, though
this is a valid schema, PowerPoint doesn't accept this.

Now empty p:pic element is exported for empty graphics

Change-Id: Iac6fb988aa20e1bc9ae938d2a02dfc7b8dfae0c1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195623
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
(cherry picked from commit 33a228978b109a05f05078bc430e9d61698798c9)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196542
Tested-by: Jenkins